# checkers-jni

./: README.md
c++/: CMakeLists.txt  Game.h  library.cpp
java/: CheckerButton.java  EndGame.java  Game.java  GameTest.java
src/: BoardKeyHandler.java  BoardMouseHandler.java  Checker.java  CheckerButton.java  CheckersMenu.java  EndGame.java  Game.h  Game.java  GameTest.java  Handler.java
